refactor: Try out BalmModule for that retro modding feel